// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`About correctly renders Details tab markup 1`] = `
<div
  className="movie-card__desc"
>
  <nav
    className="movie-nav movie-card__nav"
  >
    <ul
      className="movie-nav__list"
    >
      <li
        className="movie-nav__item"
      >
        <a
          className="movie-nav__link"
          href="#Overview"
        >
          Overview
        </a>
      </li>
      <li
        className="movie-nav__item movie-nav__item--active"
      >
        <a
          className="movie-nav__link"
          href="#Details"
        >
          Details
        </a>
      </li>
      <li
        className="movie-nav__item"
      >
        <a
          className="movie-nav__link"
          href="#Reviews"
        >
          Reviews
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="movie-card__text movie-card__row"
  >
    <div
      className="movie-card__text-col"
    >
      <p
        className="movie-card__details-item"
      >
        <strong
          className="movie-card__details-name"
        >
          Director
        </strong>
        <span
          className="movie-card__details-value"
        >
          Steven Spielberg
        </span>
      </p>
      <p
        className="movie-card__details-item"
      >
        <strong
          className="movie-card__details-name"
        >
          Starring
        </strong>
        <span
          className="movie-card__details-value"
        >
          Tom Cruise,
          <br />
          Dakota Fanning,
          <br />
          Tim Robbintrue
          <br />
        </span>
      </p>
    </div>
    <div
      className="movie-card__text-col"
    >
      <p
        className="movie-card__details-item"
      >
        <strong
          className="movie-card__details-name"
        >
          Run Time
        </strong>
        <span
          className="movie-card__details-value"
        >
          1h 56m
        </span>
      </p>
      <p
        className="movie-card__details-item"
      >
        <strong
          className="movie-card__details-name"
        >
          Genre
        </strong>
        <span
          className="movie-card__details-value"
        >
          Adventure
        </span>
      </p>
      <p
        className="movie-card__details-item"
      >
        <strong
          className="movie-card__details-name"
        >
          Released
        </strong>
        <span
          className="movie-card__details-value"
        >
          2005
        </span>
      </p>
    </div>
  </div>
</div>
`;

exports[`About correctly renders Reviews tab markup 1`] = `
<div
  className="movie-card__desc"
>
  <nav
    className="movie-nav movie-card__nav"
  >
    <ul
      className="movie-nav__list"
    >
      <li
        className="movie-nav__item"
      >
        <a
          className="movie-nav__link"
          href="#Overview"
        >
          Overview
        </a>
      </li>
      <li
        className="movie-nav__item"
      >
        <a
          className="movie-nav__link"
          href="#Details"
        >
          Details
        </a>
      </li>
      <li
        className="movie-nav__item movie-nav__item--active"
      >
        <a
          className="movie-nav__link"
          href="#Reviews"
        >
          Reviews
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="movie-card__reviews movie-card__row"
  >
    <div
      className="movie-card__reviews-col"
    >
      <div
        className="review"
        id="review-1"
      >
        <blockquote
          className="review__quote"
        >
          <p
            className="review__text"
          >
            Discerning travellers and Wes Anderson fans will luxuriate in the glorious Mittel-European kitsch of one of the director's funniest and most exquisitely designed movies in years.
          </p>
          <footer
            className="review__details"
          >
            <cite
              className="review__author"
            >
              Kate Muir
            </cite>
            <time
              className="review__date"
              dateTime="2019-06-14T06:39:07.535Z"
            >
              June 14, 2019
            </time>
          </footer>
        </blockquote>
        <div
          className="review__rating"
        >
          1.5
        </div>
      </div>
      <div
        className="review"
        id="review-2"
      >
        <blockquote
          className="review__quote"
        >
          <p
            className="review__text"
          >
            It was well acted, directed, and the music was good. But the story is yawn. Not trying to rip anybody but I checked my watch a dozen times during this movie.
          </p>
          <footer
            className="review__details"
          >
            <cite
              className="review__author"
            >
              Mollie
            </cite>
            <time
              className="review__date"
              dateTime="2019-06-14T06:39:07.535Z"
            >
              June 14, 2019
            </time>
          </footer>
        </blockquote>
        <div
          className="review__rating"
        >
          2.0
        </div>
      </div>
      <div
        className="review"
        id="review-3"
      >
        <blockquote
          className="review__quote"
        >
          <p
            className="review__text"
          >
            I love this movie. This film is a milestone in cinematography. Great Immersive camera-work. This film is an experience and i has already seen it 4 times and I only see more quality of the film.
          </p>
          <footer
            className="review__details"
          >
            <cite
              className="review__author"
            >
              Mollie
            </cite>
            <time
              className="review__date"
              dateTime="2019-05-27T06:39:07.535Z"
            >
              May 27, 2019
            </time>
          </footer>
        </blockquote>
        <div
          className="review__rating"
        >
          2.5
        </div>
      </div>
      <div
        className="review"
        id="review-4"
      >
        <blockquote
          className="review__quote"
        >
          <p
            className="review__text"
          >
            I love this movie. This film is a milestone in cinematography. Great Immersive camera-work. This film is an experience and i has already seen it 4 times and I only see more quality of the film.
          </p>
          <footer
            className="review__details"
          >
            <cite
              className="review__author"
            >
              Mollie
            </cite>
            <time
              className="review__date"
              dateTime="2019-05-27T06:39:07.535Z"
            >
              May 27, 2019
            </time>
          </footer>
        </blockquote>
        <div
          className="review__rating"
        >
          3.0
        </div>
      </div>
    </div>
    <div
      className="movie-card__reviews-col"
    >
      <div
        className="review"
        id="review-5"
      >
        <blockquote
          className="review__quote"
        >
          <p
            className="review__text"
          >
            It was well acted, directed, and the music was good. But the story is yawn. Not trying to rip anybody but I checked my watch a dozen times during this movie.
          </p>
          <footer
            className="review__details"
          >
            <cite
              className="review__author"
            >
              Mollie
            </cite>
            <time
              className="review__date"
              dateTime="2019-06-14T06:39:07.535Z"
            >
              June 14, 2019
            </time>
          </footer>
        </blockquote>
        <div
          className="review__rating"
        >
          3.5
        </div>
      </div>
      <div
        className="review"
        id="review-6"
      >
        <blockquote
          className="review__quote"
        >
          <p
            className="review__text"
          >
            I love this movie. This film is a milestone in cinematography. Great Immersive camera-work. This film is an experience and i has already seen it 4 times and I only see more quality of the film.
          </p>
          <footer
            className="review__details"
          >
            <cite
              className="review__author"
            >
              Mollie
            </cite>
            <time
              className="review__date"
              dateTime="2019-05-27T06:39:07.535Z"
            >
              May 27, 2019
            </time>
          </footer>
        </blockquote>
        <div
          className="review__rating"
        >
          4.0
        </div>
      </div>
      <div
        className="review"
        id="review-7"
      >
        <blockquote
          className="review__quote"
        >
          <p
            className="review__text"
          >
            I love this movie. This film is a milestone in cinematography. Great Immersive camera-work. This film is an experience and i has already seen it 4 times and I only see more quality of the film.
          </p>
          <footer
            className="review__details"
          >
            <cite
              className="review__author"
            >
              Mollie
            </cite>
            <time
              className="review__date"
              dateTime="2019-05-27T06:39:07.535Z"
            >
              May 27, 2019
            </time>
          </footer>
        </blockquote>
        <div
          className="review__rating"
        >
          5.0
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`About correctly renders default markup 1`] = `
<div
  className="movie-card__desc"
>
  <nav
    className="movie-nav movie-card__nav"
  >
    <ul
      className="movie-nav__list"
    >
      <li
        className="movie-nav__item movie-nav__item--active"
      >
        <a
          className="movie-nav__link"
          href="#Overview"
        >
          Overview
        </a>
      </li>
      <li
        className="movie-nav__item"
      >
        <a
          className="movie-nav__link"
          href="#Details"
        >
          Details
        </a>
      </li>
      <li
        className="movie-nav__item"
      >
        <a
          className="movie-nav__link"
          href="#Reviews"
        >
          Reviews
        </a>
      </li>
    </ul>
  </nav>
  <div
    className="movie-rating"
  >
    <div
      className="movie-rating__score"
    >
      6.5
    </div>
    <p
      className="movie-rating__meta"
    >
      <span
        className="movie-rating__level"
      >
        Good
      </span>
      <span
        className="movie-rating__count"
      >
        386834 ratings
      </span>
    </p>
  </div>
  <div
    className="movie-card__text"
  >
    As Earth is invaded by alien tripod fighting machines, one family fights for survival.
    <p
      className="movie-card__director"
    >
      <strong>
        Director: Steven Spielberg
      </strong>
    </p>
    <p
      className="movie-card__starring"
    >
      <strong>
        Starring: Tom Cruise, Dakota Fanning, Tim Robbin and other
      </strong>
    </p>
  </div>
</div>
`;
